Eduardo_Tatto_Shop_V1_20/04/23

--- a/designs.html
+++ b/designs.html
@@ -111,8 +111,8 @@
             <h1 class="title_section">Diseños</h1>
             <div class="parrafo_section">
               <p>
-                En este apartado te brindamos unas pocas ideas si aún no sabes que
-                tatuaje te quieres hacer.
+                En este apartado te brindamos unas pocas ideas si aún no sabes
+                que tatuaje te quieres hacer.
               </p>
               <p>
                 Aquí te mostramos unos pocos diseños, visita nuestras redes
@@ -126,276 +126,364 @@
       <section class="galeria">
         <h1 class="title_section">Galería</h1>
         <div class="galeria-designs">
-          <div class="card-design">
+          <div id="imgDesigns_1" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (1).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños varios para tatuajes minimalistas</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_2" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (2).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseño oldschool de una mujer</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_3" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (3).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños realistas de una mujer y otros objetos</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_4" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (4).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños oldschool de varios objetos</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_5" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (5).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseño realista de una mujer y flores</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_6" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (6).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños de varios objetos con distintos estilos</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_7" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (7).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños de distintos objetos y estilos</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_8" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (8).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños realistas de elementos de la naturaleza</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_9" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (9).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseño oldschool de varios elementos</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_10" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (10).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños realistas de elementos de la naturaleza</p>
+
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_11" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (11).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños de distintos objetos y estilos</p>
+
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_12" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (12).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños varios para tatuajes minimalistas</p>
+
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_13" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (13).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños varios para tatuajes minimalistas</p>
+
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_14" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/d (14).png"
               alt="imágen con diseños variados para tatuajes"
             />
+            <p class="descripcionImg">Diseños varios para tatuajes minimalistas</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_15" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/a1.png"
               alt="imágen de tatuaje de un tigre hecho a color"
             />
+            <p class="descripcionImg">Tatuaje de un tigre con un estilo neotradicional</p>
+
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_16" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/a2.png"
               alt="imágen de tatuaje de un ojo de dragón hecho a color"
             />
+            <p class="descripcionImg">Tatuaje de un dragón con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_17" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/a11.png"
               alt="imágen de tatuaje de una bicicleta con un paisaje de fondo hecho a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje de una bicicleta con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_18" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/a10.png"
               alt="imágen de tatuaje de un samurai a blanco y negro con un símbolo rojo de fondo"
             />
+            <p class="descripcionImg">Tatuaje de un samurai con un estilo reallista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_19" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r5.png"
               alt="imágen de tatuaje de María rezando hecho a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje de María con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_20" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r3.png"
               alt="imágen de tatuaje de un león con su cría hecho a blanco y megro"
             />
+            <p class="descripcionImg">Tatuaje de un león con un estilo realista</p>
+
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_21" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r4.png"
               alt="imágen de tatuaje de un lobo hecho a blanco y negro con ciertos detalles a color"
             />
+            <p class="descripcionImg">Tatuaje de un lobo con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_22" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r1.png"
               alt="imágen de tatuaje de una locomotora a vapor hecho a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje de una locomotora con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_23" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/s1.png"
               alt="imágen de tatuaje de Goku y Milk hecho a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje de Goku y Milk </p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_24" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/s2.png"
               alt="imágen de tatuaje de star wars con la estrella de la muerte hecho a blanco y negro con ciertos detalles a color"
             />
+            <p class="descripcionImg">Tatuaje de Star Wars con un estilo tipo sombra </p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_25" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/s3.png"
               alt="imágen de tatuaje de Kakashi hecho a blanco y negro con ciertos detalles a color"
             />
+            <p class="descripcionImg">Tatuaje de Kakashi con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_26" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/s5.png"
               alt="imágen de tatuaje de la máscara de zelda hecha a color"
             />
+            <p class="descripcionImg">Tatuaje máscara de Majora con un estilo oldschool a color</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_27" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/s9.png"
               alt="imágen de tatuajes de distintas series hechas a color"
             />
+            <p class="descripcionImg">Tatuaje de distinos personajes con un estilo de caricaturas y fondo acuarela</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_28" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/v1.png"
               alt="imágen de tatuaje de un gato con flores de fondo hecho a blanco y negro con ciertos detalles a color"
             />
+            <p class="descripcionImg">Tatuaje de un gato con un estilo realista en negro</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_29" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/v2.png"
               alt="imágen de tatuaje de un panda con el yin yang de fondo hecho a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje con varios elementos con varios estilos</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_30" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r8.png"
               alt="imágen de tatuaje de un girasol y una rosa hecho a color"
             />
+            <p class="descripcionImg">Tatuaje de flores con un estilo realista a color</p>
           </div>
-          <div class="card-design">
+          <div id="imgDesigns_31" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/a5.png"
-              alt="imágen de tatuaje de un panda con el yin yang de fondo hecho a blanco y negro"
+              alt="imágen de Tatuaje de un faraón con un estilo realista a blanco y negro"
             />
+            <p class="descripcionImg">Tatuaje de un faraón con un estilo realista</p>
           </div>
 
-          <div class="card-design">
+          <div id="imgDesigns_32" class="card-design">
             <img
+              class="card-design_img"
               src="assets/images/designs/r9.png"
-              alt="imágen de tatuaje de un girasol y una rosa hecho a color"
+              alt="imágen de Tatuaje de una jirafas con un estilo realista a color"
             />
+            <p class="descripcionImg">Tatuaje de una jirafas con un estilo realista a color</p>
+          </div>
+
+          <div id="imgDesigns_33" class="card-design">
+            <img
+              class="card-design_img"
+              src="assets/images/designs/a7.png"
+              alt="imágen de Tatuaje de una flor y varias olas con un estilo japonés"
+            />
+            <p class="descripcionImg">Tatuaje de una flor y varias olas con un estilo japonés</p>
+          </div>
+
+          <div id="imgDesigns_34" class="card-design">
+            <img
+              class="card-design_img"
+              src="assets/images/designs/a6.png"
+              alt="imágen de Tatuaje de una máscara con un estilo newschool"
+            />
+            <p class="descripcionImg">Tatuaje de una máscara con un estilo newschool</p>
           </div>
         </div>
       </section>
     </main>
 
-<!-- Footer -->
-<footer id="contactos" class="footer">
-  <div class="info-contacto">
-    <h3 class="title-footer">Contáctenos</h3>
-    <div class="columns">
-      <ul>
-        <li>
-          <a
-            href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
-            target="_blank"
-            ><i class="fa-brands fa-whatsapp"></i
-            ><span> +(506)8555-0337</span></a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.instagram.com/badilla_edu.art/"
-            target="_blank"
-            ><i class="fa-brands fa-instagram"> </i
-            ><span> @badilla_edu.art</span></a
-          >
-        </li>
-        <li>
-          <a
-            href="https://www.facebook.com/eddobadillatattoo"
-            target="_blank"
-            ><i class="fa-brands fa-facebook"></i
-            ><span> Eduardo Badilla Tattoos</span></a
-          >
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a
-            href="https://www.tiktok.com/@eddobadillatattoo"
-            target="_blank"
-            ><i class="fa-brands fa-tiktok"></i
-            ><span> @eddobadillatattoo</span></a
-          >
-        </li>
-        <li>
-          <a href="https://twitter.com/BadillaEddo" target="_blank"
-            ><i class="fa-brands fa-twitter"></i
-            ><span> @BadillaEddo</span></a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="info-direccion">
-    <h4 class="title-footer">Dirección</h4>
-    <p>
-      <i class="fa-solid fa-location-dot"></i> Costado Este del parque
-      Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
-      Costa Rica, 20101
-    </p>
-  </div>
-</footer>
+    <!-- Footer -->
+    <footer id="contactos" class="footer">
+      <div class="info-contacto">
+        <h3 class="title-footer">Contáctenos</h3>
+        <div class="columns">
+          <ul>
+            <li>
+              <a
+                href="https://api.whatsapp.com/send/?phone=50685550337&text&type=phone_number&app_absent=0"
+                target="_blank"
+                ><i class="fa-brands fa-whatsapp"></i
+                ><span> +(506)8555-0337</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/badilla_edu.art/"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"> </i
+                ><span> @badilla_edu.art</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/eddobadillatattoo"
+                target="_blank"
+                ><i class="fa-brands fa-facebook"></i
+                ><span> Eduardo Badilla Tattoos</span></a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a
+                href="https://www.tiktok.com/@eddobadillatattoo"
+                target="_blank"
+                ><i class="fa-brands fa-tiktok"></i
+                ><span> @eddobadillatattoo</span></a
+              >
+            </li>
+            <li>
+              <a href="https://twitter.com/BadillaEddo" target="_blank"
+                ><i class="fa-brands fa-twitter"></i
+                ><span> @BadillaEddo</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="info-direccion">
+        <h4 class="title-footer">Dirección</h4>
+        <p>
+          <i class="fa-solid fa-location-dot"></i> Costado Este del parque
+          Palmares, frente a parada de taxis, en Alajuela centro., Alajuela,
+          Costa Rica, 20101
+        </p>
+      </div>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/db9da4ce5b.js"
@@ -408,7 +496,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="JS/animaciones.js" type="text/javascript" async ></script>
-
+    <script src="JS/animaciones.js" type="text/javascript" async></script>
   </body>
 </html>
