--- a/videos.html
+++ b/videos.html
@@ -191,5 +191,8 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+
+    <script src="JS/ejecutarVideo.js" type="text/javascript" async></script>
+
   </body>
 </html>
