fix-index-references

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
         <!-- <div class="container-fluid"> -->
-        <a href="#inicio" class="logo_pagina">
+        <a href="index.html" class="logo_pagina">
           <img
             src="assets/images/general/logo.png"
             alt="imágen del logo de la empresa"
