Eduardo-Tattoo-Shop-V1.1-20/04/23

--- a/about_us.html
+++ b/about_us.html
@@ -37,7 +37,7 @@
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
-        <a href="index.html#inicio" class="logo_pagina">
+        <a href="index.html" class="logo_pagina">
           <img
             src="assets/images/general/logo.png"
             alt="imágen del logo de la empresa"
