--- a/servicios.html
+++ b/servicios.html
@@ -36,8 +36,7 @@
     <header class="header">
       <!-- Barra de navegación -->
       <nav class="fixed-top nav_bar">
-        <!-- <div class="container-fluid"> -->
-        <a href="index.html#inicio" class="logo_pagina">
+        <a href="index.html" class="logo_pagina">
           <img
             src="assets/images/general/logo.png"
             alt="imágen del logo de la empresa"
@@ -56,7 +55,6 @@
           data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar"
         >
-          <!-- <i class="fa-solid fa-bars"></i> -->
           <i class="fa-solid fa-bars icono-burger"></i>
         </button>
         <div
