fix-telefono-form

--- a/contactenos.html
+++ b/contactenos.html
@@ -197,7 +197,7 @@
               ></i>
             </div>
             <p class="formulario__input-error">
-              El teléfono solo puede contenedr número y el máximo son 8 dígitos.
+              El teléfono solo puede contener un mínimo de 7 y un máximo de 14 caractéres.
             </p>
           </div>
 
