--- a/contactenos.html
+++ b/contactenos.html
@@ -5,16 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Harold Francisco Badilla Umaña" />
-    <meta
-      name="description"
-      content="Eduardo Badilla Tatto, es un estudio ubicado en la zona de Alajuela, Costa Rica que diseña y ofrece tatuajes de calidad a buen costo"
-    />
-
-    <meta
-      name="keywords"
-      content="Tatto Tatuaje Tatuajes_Costa_Rica Tatuajes_Alajuela_Costa_Rica Eduardo_Badilla_Umaña"
-    />
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,7 +29,7 @@
 
     <link rel="stylesheet" href="CSS/media.css" />
 
-    <title>EDUARDO TATTO SHOP / Contáctenos</title>
+    <title>EDUARDO TATTOO SHOP / Contáctenos</title>
   </head>
 
   <body id="body">
@@ -75,7 +66,7 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Eduardo Tatto Shop
+              Eduardo Tattoo Shop
             </h5>
             <button
               type="button"
