--- a/designs.html
+++ b/designs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Harold Francisco Badilla Umaña" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +30,7 @@
 
     <link rel="stylesheet" href="CSS/media.css" />
 
-    <title>EDUARDO TATTO SHOP / Diseños</title>
+    <title>EDUARDO TATTOO SHOP / Diseños</title>
   </head>
 
   <body>
@@ -66,7 +67,7 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Eduardo Tatto Shop
+              Eduardo Tattoo Shop
             </h5>
             <button
               type="button"
