--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta name="author" content="Harold Francisco Badilla Umaña" />
     <meta
       name="description"
-      content="Eduardo Badilla Tatto, es un estudio ubicado en la zona de Alajuela, Costa Rica que diseña y ofrece tatuajes de calidad a buen costo"
+      content="Eduardo Tatto Shop, es un estudio ubicado en la zona de Alajuela, Costa Rica que diseña y ofrece tatuajes de calidad a buen costo"
     />
 
     <meta
       name="keywords"
-      content="Tatto Tatuaje Tatuajes_Costa_Rica Tatuajes_Alajuela_Costa_Rica Eduardo_Badilla_Umaña"
+      content="Tattoo Tatuaje Tatuajes_Costa_Rica Tatuajes_Alajuela_Costa_Rica Eduardo_Badilla_Umaña"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,7 +44,7 @@
 
     <link rel="stylesheet" href="CSS/media.css" />
 
-    <title>EDUARDO TATTO SHOP</title>
+    <title>EDUARDO TATTOO SHOP</title>
   </head>
 
   <body>
@@ -81,7 +81,7 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Eduardo Tatto Shop
+              Eduardo Tattoo Shop
             </h5>
             <button
               type="button"
@@ -120,7 +120,7 @@
       <!-- Sección de bienvenida donde habra una imagen de fondo y un título -->
       <section class="welcome">
         <div class="texto_welcome">
-          <h1 class="titulo_welcome">EDUARDO TATTO SHOP</h1>
+          <h1 class="titulo_welcome">EDUARDO TATTOO SHOP</h1>
         </div>
       </section>
 
