--- a/about_us.html
+++ b/about_us.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="CSS/media.css" />
 
-    <title>EDUARDO TATTO SHOP / Sobre Nosotros</title>
+    <title>EDUARDO TATTOO SHOP / Sobre Nosotros</title>
   </head>
 
   <body>
@@ -66,7 +66,7 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Eduardo Tatto Shop
+              Eduardo Tattoo Shop
             </h5>
             <button
               type="button"
