--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Harold Francisco Badilla Umaña" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +29,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
 
     <link rel="stylesheet" href="CSS/media.css" />
-    <title>EDUARDO TATTO SHOP / Servicios</title>
+    <title>EDUARDO TATTOO SHOP / Servicios</title>
   </head>
 
   <body>
@@ -65,7 +66,7 @@
         >
           <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Eduardo Tatto Shop
+              Eduardo Tattoo Shop
             </h5>
             <button
               type="button"
